@@ -108,16 +108,6 @@ jobs:
           CPPSTD: c++11
         - SWIGLANG: perl5
         - SWIGLANG: php
-          VER: '7.0'
-        - SWIGLANG: php
-          VER: '7.1'
-        - SWIGLANG: php
-          VER: '7.2'
-        - SWIGLANG: php
-          VER: '7.3'
-        - SWIGLANG: php
-          VER: '7.4'
-        - SWIGLANG: php
           VER: '8.0'
         - SWIGLANG: php
           VER: '8.1'
